--- a/main.html
+++ b/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 
 <head>
   <meta charset="utf-8">
@@ -9,41 +9,18 @@
 
 <body>
   <script type="text/javascript">
-    // function aesEncrypt(){
-    //   var key = [];
-    //   var plaintext = document.getElementById("input").value;
-    //
-    //   var aesAlgorithmKeyGen = {
-    //     name: "AES-CBC",
-    //     length: 128
-    //   };
-    //
-    //   var aesAlgorithmEncrypt = {
-    //     name: "AES-CBC",
-    //     iv: window.crypto.getRandomValues(new Unit8Array(16))
-    //   };
-    //
-    //   // 키생성 및 데이터 암호화
-    //   window.crypto.subtle.generateKey(aesAlgorithmKeyGen, false, ["encrypt"]).then(
-    //     function(aesKey) {
-    //       return window.crypto.subtle.encrypt(aesAlgorithmEncrypt, aesKey, [plaintext]);
-    //     }
-    //   ).then(console.log.bind(console, "ciphertext: "),
-    //     console.error.bind(console, "unable to encrypt"));
-    //
-    // }
-    function aesCreateKey() { // key 생성
+    const key = function(){
       window.crypto.subtle.generateKey({
-          name: "AES-CBC",
-          length: 256,
-        },
-        false, ["encrypt", "decrypt"]
-      ).then(function(key) {
-        console.log(key);
-      }).catch(function(err) {
-        console.error(err);
-      });
-    }
+            name: "AES-CBC",
+            length: 256,
+          },
+          false, ["encrypt", "decrypt"]
+        ).then(function(key) {
+          console.log(key);
+        }).catch(function(err) {
+          console.error(err);
+        });
+    };
 
     function aesEncrypt() {
       var data = document.getElementById("input").value; // 암호화할 데이터
@@ -60,47 +37,61 @@
       });
     }
 
-    function indexedDBOK() {
+    function indexedDBCheck() {
       if (!window.indexedDB) { // indexedDB 브라우저 지원여부 확인
         window.alert("Your browser doesn't support a indexedDB.");
       }
-      var dbName = "keyTable";
+      var dbName = "keyDB";
       var dbVersion = 1.0;
-      var keyDB = {};
-      var request = window.indexedDB.open(dbName, dbVersion); // DB Open
-      var dbResult = request.result;
+      var db;
+      var objectStore;
+      var openRequest = window.indexedDB.open(dbName, dbVersion); // DB Open
 
-      request.onupgradeneeded = function(event) { // db 생성 또는 버전 업그레이드시 수행
-        if (!dbResult.objectStoreNames.contains("keyTable")) { // "keyTable" object Store 생성
-          dbResult.createObjectStore("keyTable", {keyPath: "key"});
+      openRequest.onupgradeneeded = function(e) { // db 생성 또는 버전 업그레이드시 수행
+        console.log("onupgradeneeded");
+        db = e.target.result;
+        if (!db.objectStoreNames.contains("keyTable")) { // "keyTable" object Store 생성
+          objectStore = db.createObjectStore("keyTable", {keyPath: "key"});
         }
-      }
+        objectStore.add(key);
+      };
 
-      request.onsuccess = function() {
+      openRequest.onsuccess = function(e) {
+        console.log("onsuccess");
+        db = e.target.result;
         var transaction = db.transaction(["keyTable"], "readwrite");
-        var objectStore = transaction.objectStore("keyTable");
+        objectStore = transaction.objectStore("keyTable");
+        var getRequest = objectStore.get("key");
+        getRequest.onerror = function(e){
+          console.log("error", e.target.error.name);
+        };
+        getRequest.onsuccess = function(e){
+          console.log("get success");
+          console.log(e);
+        };
 
-        objectStore.get(key).onsuccess = function(event) { // key를 기준으로 indexedDB 데이터를 읽어온다
-          var data = event.target.result;
-          console.log("결과: ", data);
-          if (!data) {
-            objectStore.add();
-          }
-        }
-
-      }
-
+        // var addRequest = objectStore.add();
+        // addRequest.onerror = function(e){
+        //   console.log("error", e.target.error.name);
+        // };
+        // addRequest.onsuccess = function(e){
+        //   console.log("add success");
+        // };
+      };
+      openRequest.onerror = function(e){
+        console.log("error");
+        console.error(e);
+      };
     }
+
   </script>
 
   <h2>Key</h2>
   <div id="key"></div>
-  <div>
-    <h2>입력</h2><input type="text" id="input"></div>
-  <h2>출력</h2>
-  <div id="output"></div>
+  <div><h2>입력</h2><input type="text" id="input"></div>
+  <h2>출력</h2><div id="output"></div>
   <div id="stepButton">
-    <input type="button" id="step1" value="STEP1" onclick="aesCreateKey()"></input>
+    <input type="button" id="step1" value="STEP1" onclick="indexedDBCheck()"></input>
     <input type="button" id="step2" value="STEP2" ></input>
     <input type="button" id="step3" value="STEP3"></input>
   </div>
