--- a/main.html
+++ b/main.html
@@ -9,34 +9,26 @@
 
 <body>
   <script type="text/javascript">
-    function generateKey() {
-      window.crypto.subtle.generateKey({
+    var dbName = "keyDB";
+    var dbVersion = 1.0;
+    var generateKey = function(callback) {
+      return window.crypto.subtle.generateKey({
           name: "AES-CBC",
           length: 256,
         },
         true, ["encrypt", "decrypt"]
       ).then(function(key) {
-        console.log("키생성완료");
-        debugger;
-         exportKey(key);
+        console.log("key generate 완료");
+        callback(key);
       }).catch(function(err) {
         console.error(err);
       });
-    }
+    };
 
-    function exportKey(key) {
-      window.crypto.subtle.exportKey("raw", key)
-        .then(function(keydata) {
-          console.log("key export");
-          console.log(keydata);
-        }).catch(function(err) {
-          console.error(err);
-        });
-    }
-
-    function aesEncrypt(key) {
-      var data = document.getElementById("input").value; // 암호화할 데이터
-      window.crypto.subtle.encrypt({
+    var aesEncrypt = function(key, callback) {
+      var inputData = document.getElementById("input").value; // 암호화할 데이터
+      var data = new Uint8Array(inputData);
+      return window.crypto.subtle.encrypt({
           name: "AES-CBC",
           iv: window.crypto.getRandomValues(new Uint8Array(16)),
         },
@@ -44,95 +36,136 @@
         data
       ).then(function(encrypted) {
         console.log(new Uint8Array(encrypted)); // 암호문을 담은 배열 반환
-        document.getElementById("output").innerHTML += encrypted; // 암호문 출력
-        localStorage.setItem(key, encrypted); //key와 암호문 local Storage에 저장
+        debugger;
+        callback(encrypted);
       }).catch(function(err) {
         console.error(err);
       });
     }
 
-    function aesDecrypt() {
-      window.crypto.subtle.decrypt({
+    var aesDecrypt = function(key, data, callback) {
+      return window.crypto.subtle.decrypt({
           name: "AES-CBC",
-          iv: ArrayBuffer(16),
+          iv: new ArrayBuffer(16),
         },
         key,
         data
       ).then(function(decrypted) {
         console.log(new Unit8Array(decrypted));
+        callback(decrypted);
       }).catch(function(err) {
         console.error(err);
       });
     }
 
-    function indexedDBCheck() {
-      if(!document.getElementById("input").value){
+    function dataEncrypt() {
+
+      if (!document.getElementById("input").value) { // 입력데이터 유무 체크
         alert("데이터를 입력하세요");
-      }else{
+      } else {
         if (!window.indexedDB) { // indexedDB 브라우저 지원여부 확인
           window.alert("Your browser doesn't support a indexedDB.");
         }
-
-        var dbName = "keyDB";
-        var dbVersion = 1.0;
-        var db;
-        var objectStore;
         var openRequest = window.indexedDB.open(dbName, dbVersion); // DB Open
 
         openRequest.onupgradeneeded = function(e) { // db 생성 또는 버전 업그레이드시 수행
           console.log("onupgradeneeded");
-          db = e.target.result;
+          var db = e.target.result;
           if (!db.objectStoreNames.contains("keyTable")) { // "keyTable" object Store 생성
-            objectStore = db.createObjectStore("keyTable", {keyPath: "id"});
+            objectStore = db.createObjectStore("keyTable", {
+              keyPath: "id"
+            });
           }
         };
 
         openRequest.onsuccess = function(e) {
           console.log("DB open");
-          db = e.target.result;
-          var transaction = db.transaction(["keyTable"], "readwrite");
-          objectStore = transaction.objectStore("keyTable");
-          var countRequest = objectStore.count();
-          countRequest.onsuccess = function(){
-            if (countRequest.result == 0) { // key가 없으면 생성
-              generateKey();
-
-              var addRequest = objectStore.add({
-                id: "123",
-                key: "hello"
+          var db = e.target.result;
+          //var transaction = db.transaction(["keyTable"], "readwrite");
+          var request = db.transaction(["keyTable"], "readwrite").objectStore("keyTable").count();
+          request.onsuccess = function() {
+            if (request.result == 0) { // key가 없으면 생성
+              generateKey(function(key) {
+                var addRequest = db.transaction(["keyTable"], "readwrite").objectStore("keyTable").add({
+                  id: "123",
+                  key: key
+                });
+                addRequest.onerror = function(e) {
+                  console.log("error", e.target.error.name);
+                };
+                addRequest.onsuccess = function(e) {
+                  console.log("add success");
+                };
               });
-              addRequest.onerror = function(e) {
+            } // end if
+            else {
+              // key값이 존재하면 가져온다.(get)
+              var getRequest = db.transaction(["keyTable"], "readwrite").objectStore("keyTable").get("123");
+
+              getRequest.onerror = function(e) {
                 console.log("error", e.target.error.name);
               };
-              addRequest.onsuccess = function(e) {
-                console.log("add success");
+
+              getRequest.onsuccess = function(e) {
+                console.log("get success");
+                aesEncrypt(e.target.result.key, function(encrypted) {
+                  document.getElementById("key").innerHTML = "generated Secret Key: ";
+                  document.getElementById("key").innerHTML += e.target.result.key; // 생성된 key 출력
+                  document.getElementById("output").innerHTML = "cipherText: ";
+                  document.getElementById("output").innerHTML += new Uint8Array(encrypted); // 암호문 출력
+                  localStorage.setItem(e.target.result.key, new Uint8Array(encrypted)); //key와 암호문 local Storage에 저장
+
+                });
               };
             }
+
           };
-          countRequest.onerror = function(e){
-            console.log("error", e.target.error.name);
-          }
-
-          // key값이 존재하면 가져온다.(get)
-          var getRequest = objectStore.get("123");
-
-          getRequest.onerror = function(e) {
-            console.log("error", e.target.error.name);
-          };
-
-          getRequest.onsuccess = function(e) {
-            console.log("get success");
-            aesEncrypt(e.target.result.key);
-          };
-
         };
-        openRequest.onerror = function(e) {
+        request.onerror = function(e) {
           console.log("error", e.target.error.name);
         };
-      }
+      };
+      openRequest.onerror = function(e) {
+        console.log("error", e.target.error.name);
+      };
+    } // end dataEncrypt()
 
+    function dataDecrypt() {
+      var openRequest = window.indexedDB.open(dbName, dbVersion); // DB Open
+      openRequest.onsuccess = function(e) {
+        console.log("DB open");
+        var db = e.target.result;
+        var request = db.transaction(["keyTable"], "readwrite").objectStore("keyTable").count();
+        request.onsuccess = function() {
+          generateKey(function(key) {
+            var cipherData = localStorage.getItem(key);
+            console.log(cipherData);
+            document.getElementById("output").innerHTML = "cipherText from localStorage: ";
+            document.getElementById("output").innerHTML += cipherData; // 암호문 출력
+            // key 가져오기
+            var getRequest = db.transaction(["keyTable"], "readwrite").objectStore("keyTable").get("123");
+
+            getRequest.onerror = function(e) {
+              console.log("error", e.target.error.name);
+            };
+
+            getRequest.onsuccess = function(e) {
+              console.log("get success");
+              aesDecrypt(cipherData, e.target.result.key, function(decrypted) {
+                document.getElementById("output").innerHTML += "복호화 결과: ";
+                document.getElementById("output").innerHTML += new Uint8Array(decrypted); // 복호화 결과 출력
+              });
+            };
+          });
+        };
+        request.onerror = function(e) {
+          console.log("error", e.target.error.name);
+        };
+      };
+      openRequest.onerror = function(e) {
+        console.log("error", e.target.error.name);
+      };
     }
-
   </script>
 
   <h2>Key</h2>
@@ -142,8 +175,8 @@
   <h2>출력</h2>
   <div id="output"></div>
   <div id="stepButton">
-    <input type="button" id="step1" value="STEP1" onclick="indexedDBCheck()"></input>
-    <input type="button" id="step2" value="STEP2"></input>
+    <input type="button" id="step1" value="STEP1" onclick="dataEncrypt()"></input>
+    <input type="button" id="step2" value="STEP2" onclick="dataDecrypt()"></input>
     <input type="button" id="step3" value="STEP3"></input>
   </div>
 </body>
